// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ListCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="ListCard"
      onScroll={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Simple List with Icon"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Simple List with Icon
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="list-card"
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
            }
          }
        >
          <div
            aria-label="Structured list section"
            className="bx--structured-list"
            role="table"
          >
            <div
              className="bx--structured-list-tbody"
              data-testid="Card-list-body"
              onKeyDown={[Function]}
              role="rowgroup"
            >
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://internetofthings.ibmcloud.com/"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Row content 1
                    </a>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://internetofthings.ibmcloud.com/"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Row content 2
                    </a>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    Row content 3
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://internetofthings.ibmcloud.com/"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Row content 4
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <svg
                      height="10"
                      width="30"
                    >
                      <circle
                        cx="5"
                        cy="5"
                        fill="red"
                        r="3"
                        stroke="none"
                        strokeWidth="1"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    Row content 5
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    Row content 6
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    Row content 7
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    Row content 8
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ListCard empty 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "250px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="ListCard"
      onScroll={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Simple List with Icon"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Simple List with Icon
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--empty-state"
          data-testid="EmptyState"
        >
          <div
            className="iot--empty-state--content"
          >
            <svg
              alt=""
              className="iot--empty-state--icon"
              data-testid="EmptyState-icon"
              height={80}
              width={80}
            >
              <defs>
                <linearGradient
                  id="emptystate-Default-icon_svg__a-defaultIcon"
                  x1="37.502%"
                  x2="55.959%"
                  y1="34.928%"
                  y2="57.808%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.04}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.04}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__b-defaultIcon"
                  x1="-63.062%"
                  x2="101.194%"
                  y1="77.587%"
                  y2="37.496%"
                >
                  <stop
                    offset="0%"
                    stopColor="#767676"
                  />
                  <stop
                    offset="100%"
                    stopColor="#929292"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__c-defaultIcon"
                  x1="73.167%"
                  x2="44.204%"
                  y1="89.948%"
                  y2="39.998%"
                >
                  <stop
                    offset="0%"
                    stopColor="#969696"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__d-defaultIcon"
                  x1="-23.114%"
                  x2="57.391%"
                  y1="-11.496%"
                  y2="56.197%"
                >
                  <stop
                    offset="0%"
                    stopColor="#393939"
                  />
                  <stop
                    offset="99%"
                    stopColor="#525252"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__e-defaultIcon"
                  x1="5.255%"
                  x2="56.521%"
                  y1="115.2%"
                  y2="40.489%"
                >
                  <stop
                    offset="0%"
                    stopColor="#9C9C9C"
                  />
                  <stop
                    offset="100%"
                    stopColor="#C5C5C5"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__f-defaultIcon"
                  x1="45.625%"
                  x2="61.212%"
                  y1="38.922%"
                  y2="78.234%"
                >
                  <stop
                    offset="0%"
                    stopColor="#8A8A8A"
                  />
                  <stop
                    offset="100%"
                    stopColor="#B5B5B5"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__g-defaultIcon"
                  x1="57.243%"
                  x2="41.531%"
                  y1="31.727%"
                  y2="71.327%"
                >
                  <stop
                    offset="0%"
                    stopColor="#A4A4A4"
                  />
                  <stop
                    offset="100%"
                    stopColor="#BEBEBE"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__h-defaultIcon"
                  x1="27.599%"
                  x2="45.796%"
                  y1="69.394%"
                  y2="53.639%"
                >
                  <stop
                    offset="0%"
                    stopColor="#C2C2C2"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__i-defaultIcon"
                  x1="62.356%"
                  x2="31.337%"
                  y1="64.634%"
                  y2="27.889%"
                >
                  <stop
                    offset="0%"
                    stopColor="#C6C6C6"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__j-defaultIcon"
                  x1="62.354%"
                  x2="43.81%"
                  y1="114.244%"
                  y2="17.782%"
                >
                  <stop
                    offset="0%"
                    stopColor="#B7B7B7"
                  />
                  <stop
                    offset="100%"
                    stopColor="#EEE"
                  />
                </linearGradient>
              </defs>
              <g
                fill="none"
                fillRule="nonzero"
              >
                <path
                  d="M36.131 27.683c.03.03.065.053.103.069h.042l-.159-.09s0 .02.014.02z"
                  fill="#A8A8A8"
                />
                <path
                  d="M28.793.593L.041 17.241l28.835 16.697 28.758-16.62z"
                  fill="url(#emptystate-Default-icon_svg__a-defaultIcon)"
                  transform="translate(11.724 43)"
                />
                <path
                  d="M.069 16.207v24.476L28.062 24.51V.034L.07 16.207z"
                  fill="url(#emptystate-Default-icon_svg__b-defaultIcon)"
                  transform="translate(12.414 7.138)"
                />
                <path
                  d="M40.455 2.807L27.945.33 0 16.551l12.483 2.477z"
                  fill="url(#emptystate-Default-icon_svg__c-defaultIcon)"
                  transform="translate(0 4.38)"
                />
                <path
                  d="M27.986.276L0 16.462l28.048 16.241 27.986-16.151z"
                  fill="url(#emptystate-Default-icon_svg__d-defaultIcon)"
                  transform="translate(12.414 31.276)"
                />
                <path
                  d="M28.434 40.641V16.207L.47.034V24.47l27.965 16.172z"
                  fill="url(#emptystate-Default-icon_svg__e-defaultIcon)"
                  transform="translate(40 7.138)"
                />
                <path
                  d="M28.476 24.828V.352l-28 16.2v24.482l28-16.206z"
                  fill="url(#emptystate-Default-icon_svg__f-defaultIcon)"
                  transform="translate(40 23)"
                />
                <path
                  d="M28.062 41.007V16.524L.097.36v24.475l27.965 16.173z"
                  fill="url(#emptystate-Default-icon_svg__g-defaultIcon)"
                  transform="translate(12.414 23)"
                />
                <path
                  d="M28.517 20.407L40 16.84 11.952.607.469 4.172z"
                  fill="url(#emptystate-Default-icon_svg__h-defaultIcon)"
                  transform="translate(40 3)"
                />
                <path
                  d="M39.559 10.834L28.524.317.517 16.503l11.076 10.51z"
                  fill="url(#emptystate-Default-icon_svg__i-defaultIcon)"
                  transform="translate(40 23)"
                />
                <path
                  d="M28.276 31.848l10.227-15.296L10.455.276.235 15.606z"
                  fill="url(#emptystate-Default-icon_svg__j-defaultIcon)"
                  transform="translate(2.069 23)"
                />
                <path
                  d="M2.303 38.607l.063.041 10.158-15.227 27.966 16.2.082-.104-28.048-16.241z"
                  fill="#FFF"
                />
                <path
                  d="M68.69 23.503l-.2-.186-27.973 16.186 11.076 10.51.076-.054-10.855-10.345z"
                  fill="#FFF"
                />
                <path
                  d="M80 19.841l-.159-.09-11.324 3.511-27.89-16.124-.158.055 28.048 16.235z"
                  fill="#999"
                />
                <path
                  d="M68.517 23.262h.09L40.614 7.028v-.042l-.131.042 28.034 16.234z"
                  fill="#FFF"
                />
              </g>
            </svg>
            <h3
              className="iot--empty-state--title"
              data-testid="EmptyState-title"
            >
              No data is available for this time range.
            </h3>
            <p
              className="iot--empty-state--text"
              data-testid="EmptyState-body"
            >
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ListCard with extra content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="ListCard"
      onScroll={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="List with extra content"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            List with extra content
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="list-card"
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
            }
          }
        >
          <div
            aria-label="Structured list section"
            className="bx--structured-list"
            role="table"
          >
            <div
              className="bx--structured-list-tbody"
              data-testid="Card-list-body"
              onKeyDown={[Function]}
              role="rowgroup"
            >
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-explore.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Explore entity metrics in the data lake
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      View your device data in the entity view of the main Watson IoT Platform dashboard. If your plan includes Watson IoT Platform Analytics, the data is stored in the data lake for later retrieval and processing.
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-calculate.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Perform simple calculations on your entity metrics
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      Process your entity metrics by running simple or complex calculations to create calculated metrics.
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-monitor.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      View entity metrics in a monitoring dashboard
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      Visualize your entity metrics in monitoring dashboards to get an overview of your data.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ListCard with extra long content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="ListCard"
      onScroll={[Function]}
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="List with extra long content"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            List with extra long content
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="list-card"
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
            }
          }
        >
          <div
            aria-label="Structured list section"
            className="bx--structured-list"
            role="table"
          >
            <div
              className="bx--structured-list-tbody"
              data-testid="Card-list-body"
              onKeyDown={[Function]}
              role="rowgroup"
            >
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-explore.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Explore entity metrics in the data lake
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid cumque in quam qui ut vero facilis autem. Laudantium enim accusantium facere nemo aspernatur repudiandae at, incidunt adipisci consequuntur ut, non, sint delectus labore id quaerat debitis quia veritatis autem aliquid voluptates? Quam perspiciatis aperiam perferendis incidunt rerum magni ratione iusto porro natus cumque omnis velit dolores, ipsa veniam! Maiores libero quam nam fugiat, voluptatum fuga ex architecto, enim similique quod, voluptates qui voluptas blanditiis tempora dolor assumenda quos numquam temporibus.
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-calculate.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      Perform simple calculations on your entity metrics
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id nulla porro temporibus excepturi cupiditate rem voluptatibus aspernatur minima quasi autem labore, quaerat facilis perferendis quas iste quae, voluptatem, possimus dicta fugit. Voluptatem similique odio necessitatibus delectus non itaque fugiat, saepe consectetur impedit, harum cupiditate velit repellendus assumenda, vel quasi eveniet at vero voluptate asperiores maxime quas. Error, nemo, nobis recusandae totam quod provident pariatur ipsum exercitationem nihil, doloremque consequuntur. Possimus assumenda odit nesciunt veritatis, maxime quae. Hic unde quasi quas recusandae obcaecati repellendus officia aperiam sunt, aut, minus quod vero provident, velit blanditiis necessitatibus laudantium nihil tempore nostrum impedit porro enim. Enim ipsam quasi iure perferendis repellat saepe vero, voluptate tenetur consequatur necessitatibus excepturi accusamus asperiores nam hic sapiente!
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="bx--structured-list-row"
                role="row"
              >
                <div
                  className="list-card--item bx--structured-list-td"
                  role="cell"
                >
                  <div
                    className="list-card--item--value"
                  >
                    <a
                      className="bx--link"
                      href="https://www.ibm.com/support/knowledgecenter/SSQP8H/iot/guides/micro-monitor.html"
                      rel="noopener"
                      style={
                        Object {
                          "display": "inherit",
                        }
                      }
                      target="_blank"
                    >
                      View entity metrics in a monitoring dashboard
                    </a>
                  </div>
                  <div
                    className="list-card--item--extra-content"
                  >
                    <span>
                      Visualize your entity metrics in monitoring dashboards to get an overview of your data.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
